checkstyle + spotbugs